// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-aXZVg sc-gEvEer dWLgId jKEUCy"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-aXZVg sc-gEvEer euGawu jKEUCy"
>
  foo
</button>
`;
